# paganois-cli-rs

./: Cargo.toml  README.MD
src/: main.rs
